adding trackers from db
